--- a/client/package.json
+++ b/client/package.json
@@ -8,15 +8,16 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
+    "emoji-picker-react": "^4.13.2",
     "express-validator": "^7.2.1",
+    "lucide-react": "^0.344.0",
     "package.json": "^2.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.8.1",
-    "web-vitals": "^2.1.4",
-    "lucide-react": "^0.344.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
