--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,5 @@
 HOST=0.0.0.0
 #REACT_SERVER=http://192.168.0.23:5000
-#REACT_APP_API_URL=https://kava.onrender.com
+REACT_APP_API_URL=https://kava.onrender.com
 
-REACT_APP_API_URL=http://localhost:4000
+#REACT_APP_API_URL=http://localhost:4000
